<resources>
    <string name="app_name">EasyToCook</string>
    <string name="logIn_email">Email </string>
    <string name="logIn">Login </string>
    <string name="verify_password">Verify Password </string>
    <string name="signup">Sign UP</string>
    <string name="welcome">Search and Share the Food You Like</string>
    <string name="logIn_passwords">Password</string>
    <string name="hello">Hello</string>
    <string name="hello_world">Hello World</string>
    <string name="next">   Next</string>
    <string name="btn_logOut">Log Out</string>
    <string name="btn_recipeCreation">Create Your Own Recipe</string>
    <string name="Cuisine">Cuisine</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Time">TIme</string>
    <string name="Calories">Calories</string>
    <string name="profile_pic">Profile pic</string>
    <string name="search_dish">Search Dish</string>
    <string name="user_name">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="terms">Agree to Terms and Privacy Policy</string>
    <string name="Less_than_half_hour">Less than half hour</string>
    <string name="btw_half_and_one_hour">Between half and 1 hour</string>
    <string name="more_than_a_hour">More than a hour</string>
    <string name="more_than_two_hours">More than 2 hours</string>
    <string name="less_than_500_kcal">Less than 500 Kcal</string>
    <string name="less_than_1K_kcal">Less than 1K kcal</string>
    <string name="btw_1k_and_2k_kcal">Between 1K and 2K kcal</string>
    <string name="more_than_2K">more than 2K kcal</string>
    <string name="add">Add</string>
    <string name="cooking_time">Cooking time</string>
    <string name="how_to_cook">How to Cook?</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="type_dish">Search Dish</string>
    <string name="clock_image">Clock Image</string>
    <string name="image_ingredient">ingredient image</string>
    <string name="image_Calories">image calories</string>
    <string name="name_of_receipe">Name of Receipe</string>
    <string name="receipe_detail_cook_time">Cook Time</string>
    <string name="text_view_Caloire">Receipe Detail Calories</string>
    <string name="receipe_detail_instruction">Receipe detail how to cook detail</string>
    <string name="receipe_detail">Receipe Detail</string>
    <string name="receipe_detail_cooking_time">Cooking Time (h):</string>
    <string name="receipe_detail_calories">Calories (Kcal):</string>
    <string name="error">error</string>
    <string name="DishName">Dish Name</string>
    <string name="nextt">next</string>
</resources>