<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search"
    tools:context=".Activity_cookingTime">

    <ImageView
        android:id="@+id/cookingTimeImage"
        android:layout_width="99dp"
        android:layout_height="88dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="568dp"
        android:contentDescription="@string/Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clock" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="270dp"
        android:layout_height="194dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookingTimeImage"
        app:layout_constraintTop_toTopOf="@+id/cookingTimeImage">


        <RadioButton
            android:id="@+id/lessThanHalfHour"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Less_than_half_hour"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/betweenHalfAndOneHour"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/btw_half_and_one_hour"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/moreThanOneHour"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/more_than_a_hour"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/moreThanTwoHour"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:text="@string/more_than_two_hours"
            android:textStyle="bold" />
    </RadioGroup>

    <ListView
        android:id="@+id/listViewCookingTime"
        android:layout_width="351dp"
        android:layout_height="348dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>