<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu"
    tools:context=".Activity_create_account">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toEndOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="@+id/last_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/username"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/logIn_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/logIn_passwords"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/verify_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/verify_password"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:background="#BFB8B8"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/chBTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="22dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chBTerms" />

    <CheckBox
        android:id="@+id/chBTerms"
        android:layout_width="247dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_green_light"
        android:hapticFeedbackEnabled="false"
        android:text="@string/terms"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_password" />

    <Button
        android:id="@+id/btnTerms"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:text="Read Terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toEndOf="@+id/chBTerms"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />


</androidx.constraintlayout.widget.ConstraintLayout>