<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recipe_background"
    tools:context=".Activity_recipe_detail">

    <TextView
        android:id="@+id/txtViewNameOfReceipeDetail"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:hint="@string/name_of_receipe"
        app:layout_constraintBottom_toTopOf="@+id/receipeDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receipeDetail"
        android:layout_width="375dp"
        android:layout_height="170dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:hint="@string/receipe_detail"
        app:layout_constraintBottom_toTopOf="@+id/receipeDetailCookTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/txtViewCookTime"
        android:layout_width="198dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/receipe_detail_cook_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/receipeDetailCookTime"
        app:layout_constraintTop_toBottomOf="@+id/receipeDetail"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/txtViewCalories"
        android:layout_width="201dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/text_view_Caloire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/receipeDetailCalories"
        app:layout_constraintTop_toBottomOf="@+id/txtViewCookTime"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txtViewReceipeDetailInstruction"
        android:layout_width="356dp"
        android:layout_height="222dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:hint="@string/receipe_detail_instruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipeDetail"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/receipeDetailCookTime"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/receipe_detail_cooking_time"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/receipeDetailCalories"
        app:layout_constraintEnd_toStartOf="@+id/txtViewCookTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipeDetail" />

    <TextView
        android:id="@+id/receipeDetailCalories"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="302dp"
        android:background="@color/white"
        android:text="@string/receipe_detail_calories"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtViewCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipeDetailCookTime" />
</androidx.constraintlayout.widget.ConstraintLayout>